--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	
+	<link rel="stylesheet" href="./css/et-line.css"
 	
     
 	<script src="./js/jquery-2.1.0.js"></script>
