--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
     
 <!-- bloc-0 -->
 <header>
-<section class="bloc bgc-white l-bloc " id="bloc-0">
+<div class="bloc bgc-white l-bloc " id="bloc-0">
     <div class="container bloc-sm">
         <nav class="navbar row">
             <div class="navbar-header">
@@ -54,7 +54,7 @@
             </div>
         </nav>
     </div>
-</section>
+</div>
 </header>
 
 <!-- bloc-0 END -->
@@ -78,12 +78,12 @@
 <!-- bloc-6 END -->
 
 <!-- bloc-7 -->
-<section class="bloc bgc-white l-bloc" id="bloc-7">
+<div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-6 form">
 				
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1" novalidate >
 					<div class="form-group">
 						<label class="formtitle">
 							Nom
@@ -114,7 +114,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 <!-- bloc-7 END -->
 
 <!-- ScrollToTop Button -->
@@ -123,7 +123,7 @@
 
 <footer>
 <!-- Footer - bloc-8 -->
-<section class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
@@ -160,7 +160,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 </footer>
 <!-- Footer - bloc-8 END -->
 
