--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
 				<h3 class="mg-md text-center">
-					<img src="img/stratégieimg.png">Stratégie
+					Stratégie
 				</h3>
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
