--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<img class="img" src="img/webdesignimg.png" alt="web design">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -97,7 +97,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+					<img class="img" src="img/Stratégieimg.png" alt="stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					Stratégie
@@ -107,8 +107,8 @@
 				</p>
 			</div>
 			<div class="col-sm-4">
-				<div class="text-center">
-					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
+				<div class="text-center ">
+					<img class="img" src="img/illustrationimg.png" alt="illustration">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
