--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="./css/et-line.css">
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	
 
     <title>Agence La Panthère - Lyon</title>
 
@@ -270,7 +266,11 @@
 
 
 <!-- Principal conteneur END -->
-    
+    <script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<!--<script src="./js/blocs.js"></script>-->
+	<!--<script src="./js/jquery.touchSwipe.js" defer></script>-->
+	<!--<script src="./js/gmaps.js"></script>-->
 
 </body>
 </html>
