--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 
     <title>Agence La Panthère - Lyon</title>
 
-    
+    <script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/blocs.js" defer></script>
+	<script src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="./js/gmaps.js" defer></script>
 <!-- Analytics -->
  
 <!-- Analytics END -->
@@ -266,11 +270,7 @@
 
 <!-- Principal conteneur END -->
 </body>
-    <script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+    
 
 
 </html>
