--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,12 @@
 	
     <title>Contact La Panthère - Lyon</title>
 
-    
+    <script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/blocs.js" defer></script>
+	<script src="./js/jqBootstrapValidation.js" defer></script>
+	<script src="./js/formHandler.js" defer></script>    
+
 <!-- Analytics -->
  
 <!-- Analytics END -->
@@ -159,11 +164,6 @@
 <!-- Principal conteneur END -->
 </body>
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>    
-
+	
 
 </html>
