--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+	<meta http-equiv="Cache-Control" content="no-store" />
     <meta name="description" content="La Panthère est une agence basée à Lyon spécialiste dans le web design pour aider les entreprises à se developper sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
