--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&family=Shrikhand&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="./css/et-line.css">
@@ -17,11 +16,11 @@
 
     <title>Agence La Panthère - Lyon</title>
 
-    <script src="./js/jquery-2.1.0.js" defer></script>
-	<script src="./js/bootstrap.js" defer></script>
-	<script src="./js/blocs.js" defer></script>
+    <script src="./js/jquery-2.1.0.js" async></script>
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/blocs.js" async></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js" defer></script>
+	<script src="./js/gmaps.js" async></script>
 <!-- Analytics -->
  
 <!-- Analytics END -->
