--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
     <title>Agence La Panthère - Lyon</title>
 
-    <script src="./js/jquery-2.1.0.js" async></script>
-	<script src="./js/bootstrap.js" async></script>
-	<script src="./js/blocs.js" async></script>
+    <script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" ></script>
+	<script src="./js/blocs.js" defer></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js" async></script>
+	<script src="./js/gmaps.js"></script>
 <!-- Analytics -->
  
 <!-- Analytics END -->
@@ -35,7 +35,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand logoimg" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="Logo AgenceLa Panthère" /></a>
+				<a class="navbar-brand " href="index.html"><img class="logoimg" src="img/agence-la-panthere-monochrome.svg" alt="Logo AgenceLa Panthère" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
