--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 	<meta http-equiv="Cache-Control" content="no-store" />
     <meta name="description" content="La Panthère est une agence basée à Lyon spécialiste dans le web design pour aider les entreprises à se developper sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<link defer rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link defer rel="stylesheet" type="text/css" href="./css/bootstrap.css">
-	<link defer rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+	
 	
 
     <title>Agence La Panthère - Lyon</title>
 
     <script src="./js/jquery-2.1.0.js" defer></script>
-	<script src="./js/bootstrap.js" ></script>
-	<script src="./js/blocs.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
+	<script src="./js/blocs.js" ></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script src="./js/gmaps.js" ></script>
 <!-- Analytics -->
  
 <!-- Analytics END -->
