--- a/index.html
+++ b/index.html
@@ -233,25 +233,25 @@
 				<p class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon<br>
 				</p>
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters social1">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/?lang=fr"><i class="icon-md fa-brands fa-twitter"></i></a>
+							<a class="social" href="https://twitter.com/?lang=fr"> <i class="icon-md fa-brands fa-twitter"></i>Twitter</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://fr-fr.facebook.com/"><i class="icon-md fa-brands fa-facebook-f"></i></a>
+							<a class="social" href="https://fr-fr.facebook.com/"><i class="icon-md fa-brands fa-facebook-f"></i>Facebook</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><i class="icon-md fa-brands fa-dribbble"></i></a>
+							<a class="social" href="https://dribbble.com/"><i class="icon-md fa-brands fa-dribbble"></i>Dribbble</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/"><i class="icon-md fa-brands fa-instagram"></i></a>
+							<a class="social" href="https://www.instagram.com/"><i class="icon-md fa-brands fa-instagram"></i>Instagram</a>
 						</div>
 					</div>
 				</div>
