--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-	<meta http-equiv="Cache-Control" content="no-store" />
+	<meta http-equiv="Cache-Control" content="no-cache" Cache-Control: max-age=31536000 />
     <meta name="description" content="Contactez l'agence La Panthère dans la ville de Lyon c'est par ici !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -129,7 +129,7 @@
 				<p class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon<br>
 				</p>
-				<div class="row row-no-gutters social">
+				<div class="row row-no-gutters social1">
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://twitter.com/?lang=fr"><i class="icon-md fa-brands fa-twitter"></i></a>
