--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="img" src="img/webdesignimg.png" alt="web design">
+					<img class="img1" src="img/webdesignimg.png" alt="web design">
 				</div>
 				<h3 class="mg-md text-center">
 					Web design
@@ -96,7 +96,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center">
-					<img class="img" src="img/Stratégieimg.webp" alt="stratégie">
+					<img class="img2" src="img/Stratégieimg.webp" alt="stratégie">
 				</div>
 				<h3 class="mg-md text-center">
 					Stratégie
@@ -107,7 +107,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="text-center ">
-					<img class="img" src="img/illustrationimg.webp" alt="illustration">
+					<img class="img3" src="img/illustrationimg.webp" alt="illustration">
 				</div>
 				<h3 class="mg-md text-center">
 					Illustrations
