--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta http-equiv="Cache-Control" content="no-cache" Cache-Control: max-age=31536000 />
     <meta name="description" content="La Panthère est une agence basée à Lyon spécialiste dans le web design pour aider les entreprises à se developper sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" href="./includes/form_1.php">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
@@ -16,9 +17,9 @@
 
     <title>Agence La Panthère - Lyon</title>
 
-    <script src="./js/jquery-2.1.0.js" defer></script>
+    <!--<script src="./js/jquery-2.1.0.js" defer></script>-->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="./js/bootstrap.js" defer></script>
+	<!--<script src="./js/bootstrap.js" defer></script>-->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="./js/blocs.js" ></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
