--- a/index.html
+++ b/index.html
@@ -9,18 +9,15 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="stylesheet" href="./includes/form_1.php">
-	<!--<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
 	
 
     <title>Agence La Panthère - Lyon</title>
 
-    <!--<script src="./js/jquery-2.1.0.js" defer></script>-->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<!--<script src="./js/bootstrap.js" defer></script>-->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="./js/jquery-2.1.0.js" defer></script>
+	<script src="./js/bootstrap.js" defer></script>
 	<script src="./js/blocs.js" ></script>
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<!--<script src="./js/gmaps.js" ></script>-->
